--- a/estilos.css
+++ b/estilos.css
@@ -23,6 +23,10 @@ input[type="checkbox"]:focus {
   color: black;
 }
 
+.fundo {
+  background-color: var(--marrom-claro);
+}
+
 .botao-padrao:hover {
   background-color: var(--marrom-escuro);
 }
@@ -50,4 +54,28 @@ input[type="checkbox"]:focus {
 
 .banners-titulo {
   --bs-bg-opacity: .2;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.input-range::-webkit-slider-thumb {
+  background-color: var(--marrom-claro);
+}
+
+[data-bs-theme="dark"] {
+  color: white;
+  .nav-link, .card-body, .offcanvas, .accordion, .btn {
+    --bs-nav-link-color: white;
+    --bs-card-color: white;
+    --bs-offcanvas-color:white;
+    --bs-body-color: white;
+  }
 }
